ghost/splashofink/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: splashofink
  namespace: ghost
  annotations:
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: "nginx-internal"
  rules:
    - host: splashof.ink
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: splashofink
                port:
                  number: 2368
  tls:
    - hosts:
        - splashof.ink
        - www.splashof.ink
      secretName: splashof-ink-cert
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: splashofink-ext
  namespace: ghost
spec:
  ingressClassName: "nginx-external"
  rules:
    - host: splashof.ink
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: splashofink
                port:
                  number: 2368
  tls:
    - hosts:
        - splashof.ink
        - www.splashof.ink
      secretName: splashof-ink-cert
